track item grid template changed to size items to auto preventing item overflow. Ultimately being responsive

--- a/client/src/Components/Styles/Tracklist.css
+++ b/client/src/Components/Styles/Tracklist.css
@@ -7,12 +7,13 @@
   
   .track__item{
     display: grid;
-    grid-template-columns: 50px 1fr 1fr 100px 50px;
+    grid-template-columns: 50px 1fr 1fr auto 50px;
     align-items: center;
     background-color: #FE346E;
     border-radius: 10px;
     margin-bottom: 10px;
     padding: 10px;
+    overflow: hidden;
   }
   .track__item__title-group{
     display: flex;
